test/apps/errors/src/routes/trace.svelte
<script context="module">
	import { oops } from './_trace';

	export function preload() {
		oops();
	}
</script>
